# Generative-AI-Projects

./: .gitignore  README.md  pyproject.toml
chatbot/: main.py  todo.md
chatbot/src/core/: agents.py  client.py  llms.py
chatbot/workbooks/: testing.ipynb  testing_context.json  testing_state.ipynb
