[project]
name = "gen-ai-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-core>=0.7.4",
    "autogen-ext[azure,ollama,openai]>=0.7.4",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.4",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
]
